--- a/src/app/tasks/components/task-list/task-list.component.html
+++ b/src/app/tasks/components/task-list/task-list.component.html
@@ -2,9 +2,9 @@
     <button class="btn btn-primary"
         (click)="onCreateTask()">New Task</button>
     <br><br>
-
+    <p *ngIf="(tasksError$ | async) as value">{{value}}</p>
     <app-task
-      *ngFor="let task of tasks | async"
+      *ngFor="let task of (tasks$ | async)"
       [task]="task"
       (completeTask)="onCompleteTask($event)"
       (editTask)="onEditTask($event)"
