--- a/src/app/users/components/user-list/user-list.component.html
+++ b/src/app/users/components/user-list/user-list.component.html
@@ -1,3 +1,4 @@
+<p *ngIf="(usersError$ | async) as errorMessage">{{errorMessage}}</p>
 <app-user 
   *ngFor='let user of users$ | async' 
   [user]="user"
